alteração na data

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <div >
                 <img class="img-iron aparece-e-foca-6s" src="/img/team america.png" alt="Iron Man">
             </div>
+            <div class="d-flex flex-column ">
+                <div class="d-flex  justify-content-center">
+                    <h1>ABRIL,⠀</h1>
+                    <h1>2016</h1>
+                </div> 
+            </div>
             <div class="div-meio d-flex justify-content-center position-absolute">
-                <div class="d-flex flex-column ">
-                    <div class="d-flex  justify-content-center">
-                        <h1>Abril, 2016</h1>
-                    </div>  
-                </div>
+                
                 <div class="div-img-drestranho position-absolute">
                    <img class="img-capitao aumenta-e-sobe" src="./img/capa.png" alt="doutor Estranho">
                 </div>
